refactory(Relatorio): melhorar formatação do relatorio.

--- a/src/modulo-04-c-sharp/dia-03/LocadoraDeJogos/ProjetoMVC/Content/Site.css
+++ b/src/modulo-04-c-sharp/dia-03/LocadoraDeJogos/ProjetoMVC/Content/Site.css
@@ -9,6 +9,10 @@
     padding-right: 15px;
 }
 
+.Lucida {
+    font-family: "Lucida Console"
+}
+
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
