--- a/src/modulo-04-c-sharp/dia-03/LocadoraDeJogos/ProjetoMVC/Views/Relatorio/JogosDisponiveis.cshtml
+++ b/src/modulo-04-c-sharp/dia-03/LocadoraDeJogos/ProjetoMVC/Views/Relatorio/JogosDisponiveis.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h2>Relatorio dos jogos disponiveis</h2>
-<div>@foreach (var relatorio in @Model)
+<div class="Lucida">@foreach (var relatorio in @Model)
       {
           @Html.Raw(relatorio);
       }
