commit fim de aula

--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Home/Index.cshtml
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Home/Index.cshtml
@@ -2,7 +2,10 @@
     ViewBag.Title = "Página Inicial";
 }
 
-<h2>Locadora CWI Crescer</h2>
-
-<a href="/Relatorio/JogosDisponiveis">Jogos Disponíveis</a>
-
+<h2>Bem vindo a TOP Games!!!</h2>
+<h3>Os melhores jogos com os menores preços. Somentes super lançamentos, não há outra locadora igual esta.</h3>
+<img src="@Url.Content('~/Views/Home/img/Locadora.JPG')" />
+@using (Html.BeginForm("CarregarLista", "Relatorio"))
+{
+    <button title="Listar jogos" type="submit">Listar jogos</button>
+}
