--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Locadora CWI Crescer", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Locadora TOP Games", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Jogos Disponiveis", "JogosDisponiveis", "Relatorio", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -30,7 +31,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - CWI Crescer</p>
+            <p>&copy; @DateTime.Now.Year - TOP Games</p>
         </footer>
     </div>
 
