feat(Locadora): pesquisar descricao de jogo por nome.

--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
@@ -15,8 +15,8 @@
     </thead>
     @foreach (var jogo in @Model.ListaDeJogos)
     {
-        <tr>
-            <td>@jogo.Nome</td>            
+        <tr onclick="window.location='@Url.Action("DescricaoJogo", "Relatorio", new { id = jogo.Id })'">
+            <td>@jogo.Nome</td>
             <td>@jogo.Categoria</td>
             <td>@jogo.Preco.ToString("c")</td>
         </tr>
