--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Relatorio/DescricaoJogo.cshtml
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Relatorio/DescricaoJogo.cshtml
@@ -5,12 +5,14 @@
 
 <h2>Descrição do jogo: @Model.Nome</h2>
 
-<form width="700px" height="300px">
-    <img<src="@Model.Imagem" />
+<form width="700px" height="300px" class="clearfix">
+    <div class="pull-left">
+        <img src="@Model.Imagem" height="300px" style="margin: 0px 25px 25px" />
+    </div>
     <p>Descrição : @Model.Descricao</p>
     <p>Categoria : @Model.Categoria</p>
     <p>Preço : @Model.Preco.ToString("c")</p>
-    <p>Selo : @Model.Selo</p>
+    <p>Selo : @Model.Selo</p>    
 </form>
 @if (Model.Video != null)
 {
