--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
@@ -11,6 +11,13 @@
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
+            <div class="pull-right navbar-brand">
+                @using (Html.BeginForm("JogosDisponiveis", "Relatorio"))
+                {
+                    <input id="account" type="text" name="nome" class="s" />
+                    <input type="submit" value="search" />
+                }
+            </div>   
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
@@ -21,19 +28,19 @@
                 @Html.ActionLink("Jogos Disponiveis", "JogosDisponiveis", "Relatorio", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav">                    
                 </ul>
-            </div>
+            </div>            
         </div>
     </div>
 
-    <div class="container body-content">
+    <div class="container body-content" style="min-height: 720px">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - TOP Games</p>
-        </footer>
+        <hr />        
     </div>
+    <footer class="container">
+        <p>&copy; @DateTime.Now.Year - TOP Games</p>
+    </footer>
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
