--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
@@ -5,25 +5,30 @@
 
 <h2>Jogos disponíveis para locação</h2>
 
-<table class="table table-striped table-bordered table-hover">
-    <thead>
-        <tr>
-            <th style="width: 40%">Jogo</th>            
-            <th style="width: 30%">Categoria</th>
-            <th style="width: 30%">Preço</th>
-        </tr>
-    </thead>
-    @foreach (var jogo in @Model.ListaDeJogos)
-    {
-        <tr onclick="window.location='@Url.Action("DescricaoJogo", "Relatorio", new { id = jogo.Id })'">
-            <td>@jogo.Nome</td>
-            <td>@jogo.Categoria</td>
-            <td>@jogo.Preco.ToString("c")</td>
-        </tr>
-    }    
+@if (Model.QuantidadeDeJogos > 0)
+{
+    <table class="table table-striped table-bordered table-hover">
+        <thead>
+            <tr>
+                <th style="width: 40%">Jogo</th>            
+                <th style="width: 30%">Categoria</th>
+                <th style="width: 30%">Preço</th>
+            </tr>
+        </thead>
+        @foreach (var jogo in @Model.ListaDeJogos)
+        {
+            <tr onclick="window.location='@Url.Action("DescricaoJogo", "Relatorio", new { id = jogo.Id })'">
+                <td>@jogo.Nome</td>
+                <td>@jogo.Categoria</td>
+                <td>@jogo.Preco.ToString("c")</td>
+            </tr>
+        }    
 
-</table>
-<p>Totais de jogos: @Model.QuantidadeDeJogos</p>
-<p>Jogo mais caro: @Model.JogoMaisCaro</p>
-<p>Jogo mais barato: @Model.JogoMaisBarato</p>
-<p>Media dos valores: @Model.MediaDeValor.ToString("c")</p>
+    </table>
+    <p>Totais de jogos: @Model.QuantidadeDeJogos</p>
+    <p>Jogo mais caro: @Model.JogoMaisCaro</p>
+    <p>Jogo mais barato: @Model.JogoMaisBarato</p>
+    <p>Media dos valores: @Model.MediaDeValor.ToString("c")</p>
+} else {
+    <h3>Nenhum jogo encontrado.</h3>
+}
