--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
@@ -4,9 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TOP Games - @ViewBag.Title</title>
-    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+
+    @Styles.Render("~/Content/css");
+    @Scripts.Render("~/bundles/modernizr");
+    <script src='@Scripts.Url("~/bundles/modernizr")' async></script>
+
+    @*<link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <script src="~/Scripts/modernizr-2.6.2.js"></script>*@
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top"> 
@@ -42,7 +47,9 @@
         <p>&copy; @DateTime.Now.Year - TOP Games</p>
     </footer>
 
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+    @Scripts.Render("~/bundles/jquery");
+    @Scripts.Render("~/bundles/bootstrap");
+    @*<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>*@
 </body>
 </html>
