--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
@@ -51,5 +51,7 @@
     @Scripts.Render("~/bundles/bootstrap");
     @*<script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>*@
+
+    @RenderSection("Scripts", false)
 </body>
 </html>
