fea(Locadora): adicionar login

--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                 @using (Html.BeginForm("JogosDisponiveis", "Relatorio"))
                 {
                     <input id="account" type="text" name="nome" class="s" />
-                    <input type="submit" value="search" />
+                    <input type="submit" value="Pesquisar" />
                 }
             </div>   
             <div class="navbar-header">
