refacture(Locadora): inicio correções.

--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Conta/Index.cshtml
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Conta/Index.cshtml
@@ -18,3 +18,5 @@
 
     <input type="submit" name="enviar" value="Login" />
 }
+
+<br /><p>Não cadastrado ainda? <a href="~/Conta/Cadastrar">Clique aqui para cadastrar-se</a></p>
