--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Conta/Cadastrar.cshtml
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Conta/Cadastrar.cshtml
@@ -9,7 +9,7 @@
 @using (Html.BeginForm("Salvar", "Conta", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    @Html.ValidationSummary(false)
+    @Html.ValidationSummary(true)
 
     <div class="form-group">
         @Html.LabelFor(m => m.NomeCompleto, new { @class = "col-sm-2 control-label" })
