--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Jogo/ManterJogo.cshtml
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Jogo/ManterJogo.cshtml
@@ -15,7 +15,7 @@ else
 @using (Html.BeginForm("Salvar", "Jogo", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    @Html.ValidationSummary(false)
+    @Html.ValidationSummary(true)
 
     @Html.HiddenFor(m => m.Id)
 
@@ -23,6 +23,7 @@ else
         @Html.LabelFor(m => m.Id, new { @class = "col-sm-2 control-label" })
         <div class="col-sm-10">
             @Html.DropDownListFor(m => m.Id, (IEnumerable<SelectListItem>)@ViewBag.ListaJogos, "Novo jogo", new { @class = "form-control", @onchange = "window.location.href='/jogo/manterjogo/'+this.value;" })
+            @Html.ValidationMessageFor(m => m.Id)
         </div>
     </div>
 
@@ -51,10 +52,10 @@ else
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(m => m.Selo, new { @class = "col-sm-2 control-label" })
+        @Html.LabelFor(m => m.IdSelo, new { @class = "col-sm-2 control-label" })
         <div class="col-sm-10">
-            @Html.EnumDropDownListFor(m => m.Selo, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Selo)
+            @Html.DropDownListFor(m => m.IdSelo, (IEnumerable<SelectListItem>)@ViewBag.ListaSelos, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.IdSelo)
         </div>
     </div>
 
@@ -62,6 +63,7 @@ else
         @Html.LabelFor(m => m.Imagem, new { @class = "col-sm-2 control-label" })
         <div class="col-sm-10">
             @Html.TextBoxFor(m => m.Imagem, new { @class = "form-control" })
+
         </div>
     </div>
 
