fix(Locadora): corrigir estrutura do BancoDeDados

--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Relatorio/DescricaoJogo.cshtml
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Relatorio/DescricaoJogo.cshtml
@@ -9,7 +9,7 @@
     <div class="pull-left">
         <img src="@Model.Imagem" height="300px" style="margin: 0px 25px 25px" />
     </div>
-    <p>Descrição : @Model.Descricao</p>
+    <p style="text-align:justify">Descrição : <br />@Model.Descricao</p>
     <p>Categoria : @Model.Categoria</p>
     <p>Selo : @Model.Selo</p>    
 </form>
