--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Relatorio/JogosDisponiveis.cshtml
@@ -1,9 +1,9 @@
 ﻿@model RelatorioJogosModel
 @{
-    ViewBag.Title = "Jogos Disponíveis";
+    ViewBag.Title = "Situação dos jogos";
 }
 
-<h2>Jogos disponíveis para locação</h2>
+<h2>Situação dos jogos</h2>
 
 @if (Model.QuantidadeDeJogos > 0)
 {
