--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Locacao/Detalhes.cshtml
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/Locacao/Detalhes.cshtml
@@ -13,7 +13,9 @@ else
 {
     var jogo = @Model.Jogos.FirstOrDefault(j => j.Id == Model.Id);
     <div style="height: 300px" class="clearfix">
-        <div class="pull-left" style="max-width: 400px"><img src="@jogo.Imagem" style="max-width: 400px; height: 295px; display: block;" /></div>
+        <div class="pull-left" style="max-width: 400px">
+            <img src="@jogo.Imagem" style="max-width: 400px; height: 295px; display: block;" />
+        </div>
         <div class="pull-right" style="border: 2px solid black; width: 730px; height: 300px">
             <h1 class="text-center">@jogo.Nome</h1>
             <br />
