--- a/src/modulo-05-java/lavanderia/src/main/resources/static/style.css
+++ b/src/modulo-05-java/lavanderia/src/main/resources/static/style.css
@@ -2,12 +2,30 @@
 
 .content {
 	min-height: 600px;
+	font-family: tahoma;
 }
 
 .clearfix:after {
     content: '';
     display: block;
     clear: both;
+}
+
+.simple-border {
+	border: 1px solid black;
+}
+
+.th10 {
+	width: 10%
+}
+
+.table90-center {
+	width: 90%; 
+	margin-left: 5%
+}
+
+.th20 {
+	width: 20%
 }
 
 .text-center {
