--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<meta charset="utf-8" />
-		<title>Clientes</title>
-		<link rel="stylesheet" type="text/css" href="home.css" />
-		<link rel="stylesheet" type="text/css" href="menu.css" />
-	</head>
-
-	<body>
+<head>
+	<meta charset="utf-8" />
+	<title>Listar clientes</title>
+	<link rel="stylesheet" type="text/css" href="home.css" />
+	<link rel="stylesheet" type="text/css" href="menu.css" />
+	<link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+<body>
+	<header>
+		<div class="clearfix header">
+			<nav class="block pull-right menu">
+				<ul>
+					<li class="inline-block list-menu"><a th:href="${'/'}">HomePage</a></li>
+					<li class="inline-block list-menu"><a th:href="${'/clientes/'}">Clientes</a></li>
+					<li class="inline-block list-menu"><a href="@">Contato</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
 	
-	<h2>Clientes</h2>
+	<div class="content">
+		<h2>Clientes</h2>
+		
+		<div th:if="${not #lists.isEmpty(clientes)}">
+	        
+	        <table class="block text-center simple-border table90-center">
+	        
+	            <tr>
+	                <th class="th10 simple-border">Id</th>
+	                <th class="th20 simple-border">Nome</th>
+	                <th class="th20 simple-border">CPF</th>
+	                <th class="th20 simple-border">Email</th>
+	                <th class="th10 simple-border">Visualizar</th>
+	                <th class="th10 simple-border">Editar</th>
+	                <th class="th10 simple-border">Remover</th>
+	            </tr>
+	            <tr th:each="cliente : ${clientes}">
+	                <td class="th10 simple-border" th:text="${cliente.id}"><a th:href="@{|/clientes/${cliente.id}|}"></a></td>
+	                <td class="th10 simple-border" "th:text="${cliente.nome}"></td>
+	                <td class="th10 simple-border" th:text="${cliente.cpf}"></td>
+	                <td class="th10 simple-border" th:text="${cliente.email}"></td>
+	                <td class="th10 simple-border" ><a th:href="${ '/clientes/' + cliente.id}">Visualizar</a></td>
+	                <td class="th10 simple-border" ><a th:href="${'/clientes/editar/' + cliente.id}">Editar</a></td>
+	                <td class="th10 simple-border" ><a th:href="${'/clientes/deletar/' + cliente.id}">Remover</a></td>
+	            </tr>
+	        </table>
 	
-	<div th:if="${not #lists.isEmpty(clientes)}">
-        
-        <table>
-        
-            <tr>
-                <th>Id</th>
-                <th>Nome</th>
-                <th>CPF</th>
-                <th>Email</th>
-                <th>Visualizar</th>
-                <th>Editar</th>
-                <th>Remover</th>
-            </tr>
-            <tr th:each="cliente : ${clientes}">
-                <td th:text="${cliente.id}"><a th:href="@{|/clientes/${cliente.id}|}"></a></td>
-                <td th:text="${cliente.nome}"></td>
-                <td th:text="${cliente.cpf}"></td>
-                <td th:text="${cliente.email}"></td>
-                <td><a th:href="${ '/clientes/' + cliente.id}">Visualizar</a></td>
-                <td><a th:href="${'/clientes/editar/' + cliente.id}">Editar</a></td>
-                <td><a th:href="${'/clientes/remover/' + cliente.id}">Remover</a></td>
-            </tr>
-        </table>
-
-    </div>
+	    </div>
+	</div>
 	
+	<footer>
+		<div class="clearfix footer">
+			<nav class="block text-center menu">
+				<ul>
+					<li class="inline-block list-menu"><a th:href="${'/'}">HomePage</a></li>
+					<li class="inline-block list-menu"><a th:href="${'/clientes/'}">Clientes</a></li>
+					<li class="inline-block list-menu"><a href="@">Contato</a></li>
+				</ul>
+			</nav>
+		</div>
+	</footer>
 	
-	</body>
-	
+</body>
 </html>
+
+		
