--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/novo.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/novo.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="utf-8" />
-	<title>Editar cliente</title>
+	<title>Inserir cliente</title>
 	<link rel="stylesheet" type="text/css" href="home.css" />
 	<link rel="stylesheet" type="text/css" href="menu.css" />
 	<link rel="stylesheet" type="text/css" href="style.css" />
@@ -21,7 +21,7 @@
 	</header>
 	
 	<div class="content">
-		<form th:action="@{/clientes/editar}" th:object="${cliente}" method="post">
+		<form th:action="@{/clientes/novo}" th:object="${cliente}" method="post">
 		
 			<input th:field="*{id}" type="hidden" />
 			
