--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
@@ -1,26 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="default">>
 <head>
-	<meta charset="utf-8" />
 	<title>Listar clientes</title>
-	<link rel="stylesheet" type="text/css" href="home.css" />
-	<link rel="stylesheet" type="text/css" href="menu.css" />
-	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-	<header>
-		<div class="clearfix header">
-			<nav class="block pull-right menu">
-				<ul>
-					<li class="inline-block list-menu"><a th:href="${'/'}">HomePage</a></li>
-					<li class="inline-block list-menu"><a th:href="${'/clientes/'}">Clientes</a></li>
-					<li class="inline-block list-menu"><a href="@">Contato</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
-	
-	<div class="content">
+
+	<div layout:fragment="content">
 		<h2>Clientes</h2>
 		
 		<div th:if="${not #lists.isEmpty(clientes)}">
@@ -38,29 +23,18 @@
 	            </tr>
 	            <tr th:each="cliente : ${clientes}">
 	                <td class="th10 simple-border" th:text="${cliente.id}"><a th:href="@{|/clientes/${cliente.id}|}"></a></td>
-	                <td class="th10 simple-border" "th:text="${cliente.nome}"></td>
-	                <td class="th10 simple-border" th:text="${cliente.cpf}"></td>
-	                <td class="th10 simple-border" th:text="${cliente.email}"></td>
-	                <td class="th10 simple-border" ><a th:href="${ '/clientes/' + cliente.id}">Visualizar</a></td>
-	                <td class="th10 simple-border" ><a th:href="${'/clientes/editar/' + cliente.id}">Editar</a></td>
-	                <td class="th10 simple-border" ><a th:href="${'/clientes/deletar/' + cliente.id}">Remover</a></td>
+	                <td class="th20 simple-border" th:text="${cliente.nome}"></td>
+	                <td class="th20 simple-border" th:text="${cliente.cpf}"></td>
+	                <td class="th20 simple-border" th:text="${cliente.email}"></td>
+	                <td class="th10 simple-border"><a th:href="${ '/clientes/' + cliente.id}">Visualizar</a></td>
+	                <td class="th10 simple-border"><a th:href="${'/clientes/editar/' + cliente.id}">Editar</a></td>
+	                <td class="th10 simple-border"><a th:href="${'/clientes/deletar/' + cliente.id}">Remover</a></td>
 	            </tr>
 	        </table>
 	
 	    </div>
+	    <p><a th:href="${'/clientes/novo/'}">Clique aqui para adicionar um cliente novo</a></p>
 	</div>
-	
-	<footer>
-		<div class="clearfix footer">
-			<nav class="block text-center menu">
-				<ul>
-					<li class="inline-block list-menu"><a th:href="${'/'}">HomePage</a></li>
-					<li class="inline-block list-menu"><a th:href="${'/clientes/'}">Clientes</a></li>
-					<li class="inline-block list-menu"><a href="@">Contato</a></li>
-				</ul>
-			</nav>
-		</div>
-	</footer>
 	
 </body>
 </html>
