--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/index.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/index.html
@@ -1,40 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="default">>
 <head>
-	<meta charset="utf-8" />
 	<title>Home</title>
-	<link rel="stylesheet" type="text/css" href="home.css" />
-	<link rel="stylesheet" type="text/css" href="menu.css" />
-	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-	<header>
-		<div class="clearfix header">
-			<nav class="block pull-right menu">
-				<ul>
-					<li class="inline-block list-menu"><a th:href="${'/'}">HomePage</a></li>
-					<li class="inline-block list-menu"><a th:href="${'/clientes/'}">Clientes</a></li>
-					<li class="inline-block list-menu"><a href="@">Contato</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
-	
-	<div class="content">
-		<h1 class="mensagem" th:Text="${mensagem}">Index</h1>
-	</div>
-	
-	<footer>
-		<div class="clearfix footer">
-			<nav class="block text-center menu">
-				<ul>
-					<li class="inline-block list-menu"><a th:href="${'/'}">HomePage</a></li>
-					<li class="inline-block list-menu"><a th:href="${'/clientes/'}">Clientes</a></li>
-					<li class="inline-block list-menu"><a href="@">Contato</a></li>
-				</ul>
-			</nav>
-		</div>
-	</footer>
+
+	<div layout:fragment="content">
+		<h1 class="mensagem">Bem vindo, Lavanderia Crescer</h1>
+	</div>	
 	
 </body>
 </html>
