--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/deleta.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/deleta.html
@@ -1,32 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="default">
 <head>
-	<meta charset="utf-8" />
-	<title>Deletar cliente</title>
-	<link rel="stylesheet" type="text/css" href="home.css" />
-	<link rel="stylesheet" type="text/css" href="menu.css" />
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<title>Inativar cliente</title>
 </head>
 <body>
-	<header>
-		<div class="clearfix header">
-			<nav class="block pull-right menu">
-				<ul>
-					<li class="inline-block list-menu"><a th:href="${'/'}">HomePage</a></li>
-					<li class="inline-block list-menu"><a th:href="${'/clientes/'}">Clientes</a></li>
-					<li class="inline-block list-menu"><a href="@">Contato</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
 	
-	<div class="content">
-		<h2>Visualizar</h2>
+	<!-- div layout:fragment="content">
+		<h2>Inativar</h2-->
 		
-		<form th:action="@{/clientes/deletar}" th:object="${cliente}" method="post">
+		<!-- form th:action="@{/clientes/deletar}" th:object="${cliente}" method="post">
 		
-			<p> Você tem certeza que deseja excluir permamentemente o cliente abaixao!?</p>
-			<button type="submit">Deletar</button> 
+			<p> Você tem certeza que deseja inativar o cliente abaixao!?</p>
+			<button type="submit">Inativar</button> 
 			<button type="button" th:href="${'/clientes/'}">Cancelar</button>
 	
 			<p>
@@ -60,8 +45,8 @@
 	 		</p>
 	 		
 	 		<p>
-		 		<div>label class="control-label">Bairro: </label></div>
-		 		<input th:field="*{bairro}" type="text" disabled="true"/>
+		 		<div><label class="control-label">Bairro: </label></div>
+		 		<input th:field="*{bairro}" type="text" disabled="true" />
 	 		</p>
 	 		
 	 		<p>
@@ -71,20 +56,66 @@
 	            </select>
             </p>
              
-		</form>
-	</div>
-	
-	<footer>
-		<div class="clearfix footer">
-			<nav class="block text-center menu">
-				<ul>
-					<li class="inline-block list-menu"><a th:href="${'/'}">HomePage</a></li>
-					<li class="inline-block list-menu"><a th:href="${'/clientes/'}">Clientes</a></li>
-					<li class="inline-block list-menu"><a href="@">Contato</a></li>
-				</ul>
-			</nav>
+		</form-->
+		<div layout:fragment="content">
+		<div class="row">
+			<div class="col-md-offset-4 col-md-4">
+				<h2 class="textoCentralizado textoRoxo">Remover Cliente</h2>
+				<form th:action="@{/clientes/deletar}" th:object="${cliente}"
+					method="post">
+					<div class="container-form textoRoxo">
+						<div class="form-group">
+							<input th:field="*{id}" type="hidden" />
+						</div>
+						<div class="form-group">
+							<label class="control-label">Nome: </label> <input
+								class="form-control" th:field="*{nome}" type="text"
+								 />
+						</div>
+						<div class="form-group">
+							<label class="control-label">CPF: </label> <input
+								class="form-control" th:field="*{cpf}" type="text"
+								disabled="disabled" />
+						</div>
+						<div class="form-group">
+							<label class="control-label">Endereco: </label> <input
+								class="form-control" th:field="*{endereco}" type="text"
+								disabled="disabled" />
+						</div>
+						<div class="form-group">
+							<label class="control-label">Bairro: </label> <input
+								class="form-control" th:field="*{bairro}" type="text"
+								disabled="disabled" />
+						</div>
+						<div class="form-group">
+							<label class="control-label">Cep: </label> <input
+								class="form-control" th:field="*{cep}" type="text"
+								disabled="disabled" />
+						</div>
+						<div class="form-group">
+							<label class="control-label">Email: </label> <input
+								class="form-control" th:field="*{email}" type="text"
+								disabled="disabled" />
+						</div>
+						<div class="form-group">
+							<label class="control-label">Cidade: </label> <select
+								class="form-control" th:field="*{idCidade}" disabled="disabled">
+								<option th:each="cidade : ${cidades}" th:text="${cidade.nome}"
+									th:value="${cidade.idCidade}"></option>
+							</select>
+						</div>
+					</div>
+					<h4 style="text-align: center;">Tem certeza que gostaria de
+						remover este cliente?</h4>
+					<button class="btn btn-primary" type="submit"
+						style="background-color: #800080;">Remover</button>
+					<a class="btn btn-primary" href="/clientes"
+						style="background-color: #800080;">Cancelar</a>
+				</form>
+			</div>
 		</div>
-	</footer>
+	</div>
+
 	
 </body>
 </html>		
