feat(lavanderia): implementar autenticação

--- a/src/modulo-05-java/lavanderia/src/main/resources/static/css/style.css
+++ b/src/modulo-05-java/lavanderia/src/main/resources/static/css/style.css
@@ -13,6 +13,17 @@
 	color: red;
 }
 
+.white-text {
+	color: white;
+}
+
+.logout-button {
+	background-color: white;
+	width: 90px;
+	height: 23px;
+	border-radius: 50%;
+}
+
 .has-error {
 	vertical-align: top;
 	border: 1px solid red;
