--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/deleta.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/deleta.html
@@ -25,7 +25,7 @@
 			
 			<p>
 				<div><label class="control-label">Nome: </label></div>
-				<input th:field="*{nome}" type="text" disabled="true" />
+				<input th:field="*{nome}" type="text" />
 			</p>
 			
 			<p>
