--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/index.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/index.html
@@ -7,6 +7,8 @@
 
 	<div layout:fragment="content">
 		<h1 class="mensagem">Bem vindo, Lavanderia Crescer</h1>
+		<h1 sec:authorize="hasRole('ROLE_USER')" class="mensagem">Usuario <span sec:authentication="name"></span></h1>
+		<h1 sec:authorize="hasRole('ROLE_ADMIN')" class="mensagem">Admin <span sec:authentication="name"></span></h1>
 	</div>	
 	
 </body>
