--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
@@ -16,18 +16,18 @@
 	        
 	            <tr>
 	                <th class="th05 simple-border">Id</th>
-	                <th class="th30 simple-border">Nome</th>
+	                <th class="th45 simple-border">Nome</th>
 	                <th class="th10 simple-border">CPF</th>
-	                <th class="th25 simple-border">Email</th>
+	                <th class="th10 simple-border">Situação</th>
 	                <th class="th10 simple-border">Visualizar</th>
 	                <th class="th10 simple-border">Editar</th>
 	                <th class="th10 simple-border">Remover</th>
 	            </tr>
 	            <tr th:each="cliente : ${clientes}">
 	                <td class="th05 simple-border" th:text="${cliente.id}"><a th:href="@{|/clientes/${cliente.id}|}"></a></td>
-	                <td class="th30 simple-border" th:text="${cliente.nome}"></td>
+	                <td class="th45 simple-border" th:text="${cliente.nome}"></td>
 	                <td class="th10 simple-border" th:text="${cliente.cpf}"></td>
-	                <td class="th25 simple-border" th:text="${cliente.email}"></td>
+	                <td class="th10 simple-border" th:text="${cliente.situacao}"></td>
 	                <td class="th10 simple-border"><a th:href="${ '/clientes/' + cliente.id}">Visualizar</a></td>
 	                <td class="th10 simple-border"><a th:href="${'/clientes/editar/' + cliente.id}">Editar</a></td>
 	                <td class="th10 simple-border"><a th:href="${'/clientes/deletar/' + cliente.id}">Remover</a></td>
