--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/error.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/error.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="default">>
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorator="default">
+>
 <head>
-	<title>ERRO</title>
+<title>ERRO</title>
 </head>
 <body>
 
 	<div layout:fragment="content">
-	
-	</div>	
-	
+		<h1>Ocorreu um Erro :(</h1>
+
+		<p th:if="${url}">
+			<b>Page:</b> <span th:text="${url}">Page URL</span>
+		</p>
+
+		<p th:if="${timestamp}" id='created'>
+			<b>Quando:</b> <span th:text="${timestamp}">Timestamp</span>
+		</p>
+
+		<p th:if="${status}">
+			<b>Status:</b> <span th:text="${status}">status-code</span> <span
+				th:if="${error}" th:text="'('+${error}+')'">error ...</span>
+		</p>
+
+		<div
+			th:if="${ex} or ${exception} or (${message} and ${message.length() != 0})">
+			<blockquote>
+				<i th:text="${message}">message ...</i>
+			</blockquote>
+		</div>
+	</div>
+
 </body>
 </html>
