refactory(lavanderia): alterar botão login/logout

--- a/src/modulo-05-java/lavanderia/src/main/resources/static/css/menu.css
+++ b/src/modulo-05-java/lavanderia/src/main/resources/static/css/menu.css
@@ -12,6 +12,7 @@
 
 .header {
 	background-color: #131313;	
+	display: 
 }
 
 .footer {
@@ -20,4 +21,9 @@
 
 .menu {
 	padding-right: 45px;
+}
+
+.user-info {
+	font: 12px/14px tahoma;
+	color: white;
 }
