--- a/src/modulo-05-java/lavanderia/src/main/resources/static/css/style.css
+++ b/src/modulo-05-java/lavanderia/src/main/resources/static/css/style.css
@@ -121,10 +121,16 @@
 
 .pull-right {
 	float: right;
-}.block {
+}
+
+.block {
 	display: block;
 }
 
 .inline-block {
 	display: inline-block;
+}
+
+.inline {
+	display: inline;
 }
