--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/default.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/default.html
@@ -20,9 +20,20 @@
 					<li class="inline-block list-menu"><a class="white-text"
 						href="@">Contato</a></li>
 					<li sec:authorize="isAuthenticated()" class="inline-block list-menu">
-					<form name="form" th:action="@{/login}" action="/logout" method="POST">
-						<input type="submit" id="login" value="Sair" class="logout-button" />
-					</form>
+						<div class="block" style="width=60px">
+							<h1 sec:authorize="hasRole('ROLE_USER')" class="user-info inline text-center">Usuario <span sec:authentication="name"></span></h1>
+							<h1 sec:authorize="hasRole('ROLE_ADMIN')" class="user-info inline text-center">Administrador <span sec:authentication="name"></span></h1>
+							<form name="form" th:action="@{/logout}" action="/logout" method="POST">
+								<input type="submit" id="login" value="Sair" class="logout-button inline text-center" />
+							</form>
+						</div>
+					</li>
+					<li sec:authorize="!isAuthenticated()" class="inline-block list-menu">
+						<div class="block">							
+							<form name="form" th:action="@{/login}" action="/login" method="get">
+								<input type="submit" id="login" value="Login" class="logout-button" />
+							</form>
+						</div>
 					</li>
 				</ul>
 			</nav>
