--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/edita.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/edita.html
@@ -10,8 +10,7 @@
 
 	<div layout:fragment="content">
 		<h2>Editar cliente</h2>
-		<form th:action="@{/clientes/editar}" th:object="${cliente}"
-			method="post">
+		<form th:action="@{/clientes/editar}" th:object="${cliente}" method="post">
 
 			<input th:field="*{id}" type="hidden" />
 
