--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
@@ -16,7 +16,14 @@
 	        
 	            <tr>
 	                <th class="th05 simple-border">Id</th>
-	                <th class="th50 simple-border">Nome</th>
+	                <th class="th50 simple-border">
+	                	<!-- <div>	                		
+	                		<form th:action="${'/clientes/?nome=' + @{filtro}" id="myform" method="post">
+	                			<label>Nome</label>
+	                			<input type="text" id="filtro" th:field="*{filtro}" placeholder="Filtrar por..." onblur="function() {document.myform.submit()}"/>
+	                		</form>
+	                	</div> -->
+	                </th>
 	                <th class="th15 simple-border">CPF</th>
 	                <th class="th10 simple-border">Situação</th>
 	                <th class="th10 simple-border">Visualizar</th>
