feat(lavanderia) implementar listar produtos.

--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/default.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/default.html
@@ -18,6 +18,8 @@
 					<li class="inline-block list-menu"><a class="white-text"
 						th:href="${'/clientes/'}">Clientes</a></li>
 					<li class="inline-block list-menu"><a class="white-text"
+						th:href="${'/produtos/'}">Produtos</a></li>
+					<li class="inline-block list-menu"><a class="white-text"
 						href="@">Contato</a></li>
 					<li sec:authorize="isAuthenticated()" class="inline-block list-menu">
 						<div class="block" style="width=60px">
