--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/cliente/lista.html
@@ -8,7 +8,7 @@
 	<div layout:fragment="content">
 		<h2>Clientes</h2>
 		<br />
-		<h3 class="textoRoxo" th:if="${mensagem}" th:text="${mensagem}"></h3>
+		<h3 th:if="${mensagem}" th:text="${mensagem}"></h3>
 		
 		<div th:if="${not #lists.isEmpty(clientes)}">
 	        
