feat(lavanderia): implementar edição produtos** não funcionando

--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/produto/lista.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/produto/lista.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="default">>
 <head>
-	<title>Listar clientes</title>
+	<title>Listagem de produtos</title>
 </head>
 <body>
 
