--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/produto/novo.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/produto/novo.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="default">>
 <head>
-	<title>Inserir cliente</title>
+	<title>Inserir Novo Produuto</title>
 </head>
 <body>
 	
 	<div layout:fragment="content">
-		<h2>Inserir novo cliente</h2>
+		<h2>Inserir Novo Produuto</h2>
 		<form th:action="@{/produtos/novo}" th:object="${produto}" method="post">
 			
 			<p>
