--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/default.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/default.html
@@ -20,7 +20,7 @@
 					<li class="inline-block list-menu"><a class="white-text"
 						th:href="${'/produtos/'}">Produtos</a></li>
 					<li class="inline-block list-menu"><a class="white-text"
-						href="@">Contato</a></li>
+						th:href="${'/pedidos/'}">Pedidos</a></li>
 					<li sec:authorize="isAuthenticated()" class="inline-block list-menu">
 						<div class="block" style="width=60px">
 							<h1 sec:authorize="hasRole('ROLE_USER')" class="user-info inline text-center">Usuario <span sec:authentication="name"></span></h1>
