--- a/src/modulo-05-java/lavanderia/src/main/resources/templates/default.html
+++ b/src/modulo-05-java/lavanderia/src/main/resources/templates/default.html
@@ -11,6 +11,11 @@
 <body>
 	<header layout:fragment="custom-header">
 		<div class="clearfix header">
+			<nav class="block pull-left menu">
+				<div class="inline-block list-menu" style="padding-left: 50px">
+					<img th:src="@{img/Logo.png}" alt="Logo Lavanderia Crescer" style="height:60px" />
+				</div>					
+			</nav>
 			<nav class="block pull-right menu">
 				<ul>
 					<li class="inline-block list-menu"><a class="white-text"
@@ -21,14 +26,14 @@
 						th:href="${'/produtos/'}">Produtos</a></li>
 					<li class="inline-block list-menu"><a class="white-text"
 						th:href="${'/pedidos/'}">Pedidos</a></li>
+					<li class="inline-block list-menu">
+						<h1 sec:authorize="hasRole('ROLE_USER')" class="user-info inline text-center">Usuario <span sec:authentication="name"></span></h1>
+						<h1 sec:authorize="hasRole('ROLE_ADMIN')" class="user-info inline text-center">Administrador <span sec:authentication="name"></span></h1>
+					</li>
 					<li sec:authorize="isAuthenticated()" class="inline-block list-menu">
-						<div class="block" style="width=60px">
-							<h1 sec:authorize="hasRole('ROLE_USER')" class="user-info inline text-center">Usuario <span sec:authentication="name"></span></h1>
-							<h1 sec:authorize="hasRole('ROLE_ADMIN')" class="user-info inline text-center">Administrador <span sec:authentication="name"></span></h1>
 							<form name="form" th:action="@{/logout}" action="/logout" method="POST">
 								<input type="submit" id="login" value="Sair" class="logout-button inline text-center" />
 							</form>
-						</div>
 					</li>
 					<li sec:authorize="!isAuthenticated()" class="inline-block list-menu">
 						<div class="block">							
